manage system properties for surefire